# folder-cleaner

./: .gitignore  README.md  com.github.Latesil.folder-cleaner.json  meson.build
build-dir/: metadata  metadata.debuginfo  metadata.locale
build-dir/files/: manifest.json
build-dir/files/lib/: libexiv2.so.0.27.2  libgexiv2.so.2.0.0
build-dir/files/lib/girepository-1.0/: GExiv2-0.10.typelib
build-dir/files/share/appdata/: com.github.Latesil.folder-cleaner.appdata.xml
build-dir/files/share/applications/: com.github.Latesil.folder-cleaner.desktop
build-dir/files/share/folder-cleaner/: folder-cleaner.gresource
builddir/: build.ninja
builddir/foldercleaner/: folder-cleaner
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
data/: com.github.Latesil.folder-cleaner.appdata.xml.in  com.github.Latesil.folder-cleaner.gschema.xml  style.css
foldercleaner/: #preferences.ui#  #preferences_test.ui#  aboutdialog.py  aboutdialog.ui  basic_formats.py  constants.py  folder-cleaner.gresource.xml  folder_box.py  folder_box.ui  folder_box.ui~  folder_cleaner.ui  folder_cleaner.ui~  foldercleaner.css  formats.py  helpers.py  main.py  meson.build  preferences.py  preferences.ui  preferences.ui~  preferences_old.ui  preferences_test.ui  sorting.py  user_folder.py  user_folder.ui  user_folder.ui~  window.py
po/: POTFILES.in  com.github.Latesil.folder-cleaner.pot  ru.mo  ru.po
rpm/: folder-cleaner.spec
(+16 files in other folders)
